5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1594_1804.log
== TEST (2019-04-08 22:07:20) 
-- CODE:
from math import *
A = float(input("Digite: "))
B = float(input("Digite: "))
X = float(input("Digite: "))
Y = float(input("Digite: "))
dAB = sqrt((X*B - X*A)**2 + (Y*B - Y*A)**2)
print(round(dAB,3))

-- OUTPUT:
1415.097
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:09:40) 
-- CODE:
from math import *
A = float(input("Digite: "))
B = float(input("Digite: "))
X = float(input("Digite: "))
Y = float(input("Digite: "))
dAB = sqrt(((X*B - X*A)**2) + ((Y*B - Y*A)**2)
print(round(dAB,3))

-- ERROR:
File "XXXX", line 7
    print(round(dAB,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:09:58) 
-- CODE:
from math import *
A = float(input("Digite: "))
B = float(input("Digite: "))
X = float(input("Digite: "))
Y = float(input("Digite: "))
dAB = sqrt(((X*B - X*A)**2) + ((Y*B - Y*A)**2)
print(round(dAB,3))

-- ERROR:
File "XXXX", line 7
    print(round(dAB,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
